ecmascript/parser/tests/test262-error-references/fail/9fc6ddfbb0f1cbe3.js.stderr
error: Unexpected token `.`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/9fc6ddfbb0f1cbe3.js:1:6
  |
1 | f(....a)
  |      ^

